fixed alignment issues

--- a/contactPage.css
+++ b/contactPage.css
@@ -99,7 +99,7 @@ i
     }
 
     nav {
-        text-align: center;
+        text-align: left;
     }
 
     .navbar {
